# CoolProp

./: README.md  main.py
CustomGas/: README.md  pyproject.toml
CustomGas/docs/source/: conf.py
CustomGas/src/customgas/: Wrapper.py  __init__.py  customgas.py  lowlevel.py  test.py
CustomGas/tests/: speed_test.py  test_gas.py
