[project]
name = "customgas"
version = "0.1.0"
description = "Wrapper for the low-level CoolProp-API."
readme = "README.md"
authors = [
    { name = "Dennis", email = "straub.dennis1@web.de" }
]
requires-python = ">=3.11"
dependencies = [
    "attrs>=25.4.0",
    "coolprop>=7.2.0",
]

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "black>=26.1.0",
    "isort>=8.0.1",
    "pytest>=9.0.2",
    "sphinx>=9.1.0",
    "sphinx-rtd-theme>=3.1.0",
]
